--- a/index.css
+++ b/index.css
@@ -251,7 +251,30 @@ VH: Relative to the viewport’s height */
 
   /* 7. Use border-radius to affect the box corners : */
 
-   .box1 {
+  /* 8. Adding a background image :
+  1. https://developer.mozilla.org/en-US/docs/Web/CSS/background-image 
+  https://www.w3schools.com/css/css_background_image.asp */
+
+  .box1 {
+    background: url('./assets/images/img1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 10px solid red;
+    width: 500px;
+    height: 300px;
+    box-sizing: content-box; 
+    overflow: hidden; 
+    float: left; 
+    padding: 5px 5px 5px 5px;
+    border-radius: 20px;             
+  }
+
+
+
+
+
+   /* .box1 {
     background-color: rgb(62, 14, 89);
     border: 10px solid red;
     width: 500px;
@@ -261,7 +284,9 @@ VH: Relative to the viewport’s height */
     float: left; 
     padding: 5px 5px 5px 5px;
     border-radius: 20px;             
-  } 
+  }  */
+
+  
 
   .box2 {
     background-color: rgb(78, 53, 224);
